Deployments/Ingress/Ingress_Prom_Graf_AM.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring
  namespace: monitoring
spec:
  rules:
  - host: grafana.monitoring.hpe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: container-monitoring-grafana
            port:
              number: 80
  - host: am.monitoring.hpe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: container-monitoring-kube-alertmanager
            port:
              number: 9093
  - host: monitoring.hpe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: container-monitoring-kube-prometheus
            port:
              number: 9090
