Deployments/Ingress/Ingress_Sample_App.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp-ingress-service
  namespace: sampleapp
spec:
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-clusterip-service
            port:
              number: 80
